add scraping of slim's title and date

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,10 @@
-<button id="test-link">test link</button>
+<select id="select-month">
+    <option value="january">January</option>
+    <option value="february">February</option>
+    <option value="march">March</option>
+    <option value="november" selected>November</option>
+</select>
+
+<hr>
+
+<button id="find-slims">Find Slim's Shows</button>
