--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,10 @@
 <hr>
 
 <button id="find-slims">Find Slim's Shows</button>
+<button id="find-fillmore">Find Fillmore Shows</button>
 
 <hr>
+
+<h3 id="venue-name"></h3>
 
 <ul id="show-list"></ul>
