add the independent scraping

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,6 +17,7 @@
 
 <button id="find-slims">Find Slim's Shows</button>
 <button id="find-fillmore">Find Fillmore Shows</button>
+<button id="find-independent">Find The Independent Shows</button>
 
 <hr>
 
