add scraping for warfield

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,9 +15,10 @@
 
 <hr>
 
-<button id="find-slims">Find Slim's Shows</button>
-<button id="find-fillmore">Find Fillmore Shows</button>
-<button id="find-independent">Find The Independent Shows</button>
+<button id="find-slims">Slim's</button>
+<button id="find-fillmore">The Fillmore</button>
+<button id="find-independent">The Independent</button>
+<button id="find-warfield">The Warfield</button>
 
 <hr>
 
