add scraping for bottom of the hill

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,6 +19,7 @@
 <button id="find-fillmore">The Fillmore</button>
 <button id="find-independent">The Independent</button>
 <button id="find-warfield">The Warfield</button>
+<button id="find-bottomofthehill">Bottom of the Hill</button>
 
 <hr>
 
